use local files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TropicFarm - Premium Tea & Essential Oils</title>
-    <meta name="description" content="TropicFarm offers premium Indonesian tea and essential oils for global markets. Explore our Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil.">
-    <meta name="keywords" content="tea, essential oils, black tea, green tea, nutmeg oil, patchouli oil, Indonesian exports">
+    <title>TropicFarm - Premium Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
+    <meta name="description" content="TropicFarm is Indonesia's trusted exporter of premium teas and essential oils. Discover our high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations.">
+    <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products">
     <meta name="author" content="TropicFarm">
+    <meta property="og:title" content="TropicFarm - Premium Indonesian Tea & Essential Oils Exporter">
+    <meta property="og:description" content="Indonesia's trusted exporter of premium teas and essential oils. High-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
+    <meta property="og:image" content="https://images.rove.me/w_1920,q_85/mnlwgk0fyzdzksvv0edq/java-tea-harvest.jpg">
+    <meta property="og:url" content="https://tropicfarm.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TropicFarm - Premium Indonesian Tea & Essential Oils">
+    <meta name="twitter:description" content="Discover premium Indonesian teas and essential oils from TropicFarm. Direct from sustainable plantations to global markets.">
+    <meta name="twitter:image" content="https://images.rove.me/w_1920,q_85/mnlwgk0fyzdzksvv0edq/java-tea-harvest.jpg">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://tropicfarm.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -32,7 +44,7 @@
         html { scroll-behavior: smooth; }
         .hero { 
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                        url('https://images.rove.me/w_1920,q_85/mnlwgk0fyzdzksvv0edq/java-tea-harvest.jpg') center/cover no-repeat; 
+                        url('java-tea-harvest.jpg') center/cover no-repeat; 
         }
         .floating-cta { 
             position: fixed; 
@@ -42,7 +54,7 @@
         }
         .statistics-bg {
             background: linear-gradient(rgba(44, 119, 68, 0.9), rgba(26, 92, 48, 0.9)), 
-                        url('https://images.unsplash.com/photo-1546445317-29f4545e9d53') center/cover no-repeat;
+                        url('java-tea-harvest.jpg') center/cover no-repeat;
         }
         .product-img {
             height: 250px;
@@ -118,7 +130,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
                     <div class="relative">
-                        <img src="https://sip-exim.co.id/uploads/filemanager/Ekspor%20Produk%20Teh%203.jpg" alt="Tea Plantation" class="rounded-lg shadow-xl">
+                        <img src="tea-plantation-in-indonesia.jpg" alt="Tea Plantation" class="rounded-lg shadow-xl">
                         <div class="absolute -bottom-4 -right-4 bg-primary text-white p-6 rounded-lg shadow-lg hidden md:block">
                             <p class="text-3xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
@@ -184,7 +196,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden">
-                        <img src="https://images.tokopedia.net/blog-tokopedia-com/uploads/2021/06/1.-Kandungan-Teh-Hitam.jpg" alt="Black Tea" class="w-full product-img object-cover">
+                        <img src="black-tea.jpg" alt="Black Tea" class="w-full product-img object-cover">
                     </div>
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-4">
@@ -207,7 +219,7 @@
                 </div>
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden">
-                        <img src="https://asset.kompas.com/crops/4s36mP-Lm6XEYRTlJTZJmpcg-zE=/173x96:1327x865/1200x800/data/photo/2022/03/16/623214af859f3.jpg" alt="Green Tea" class="w-full product-img object-cover">
+                        <img src="green-tea.jpg" alt="Green Tea" class="w-full product-img object-cover">
                     </div>
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-4">
@@ -266,7 +278,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl h-full">
                     <div class="overflow-hidden">
-                        <img src="https://inaexport.id/uploads/Eksportir_Product/Image/17956/1675420737_Nutmeg%20Oil,%20Direct%20from%20Farmer-Indonesia_003%20Nutmeg%20Oil.jpg" alt="Nutmeg Oil" class="w-full product-img object-cover">
+                        <img src="nutmeg-oil.jpg" alt="Nutmeg Oil" class="w-full product-img object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex justify-between items-center mb-4">
@@ -285,7 +297,7 @@
                 </div>
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl h-full">
                     <div class="overflow-hidden">
-                        <img src="https://inaexport.id/uploads/Eksportir_Product/Image/17959/1744818776_Patchouli%20Oil,%20Direct%20from%20Farmer-Indonesia_Patchouli%20Oil_Wide%20(1).jpg" alt="Patchouli Oil" class="w-full product-img object-cover">
+                        <img src="patchouli-oil.jpg" alt="Patchouli Oil" class="w-full product-img object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex justify-between items-center mb-4">
