--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TropicFarm - Premium Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
-    <meta name="description" content="TropicFarm is Indonesia's trusted exporter of premium teas and essential oils. Discover our high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations.">
-    <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products">
-    <meta name="author" content="TropicFarm">
-    <meta property="og:title" content="TropicFarm - Premium Indonesian Tea & Essential Oils Exporter">
-    <meta property="og:description" content="Indonesia's trusted exporter of premium teas and essential oils. High-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
-    <meta property="og:image" content="https://images.rove.me/w_1920,q_85/mnlwgk0fyzdzksvv0edq/java-tea-harvest.jpg">
-    <meta property="og:url" content="https://tropicfarm.com">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="TropicFarm - Premium Indonesian Tea & Essential Oils">
-    <meta name="twitter:description" content="Discover premium Indonesian teas and essential oils from TropicFarm. Direct from sustainable plantations to global markets.">
-    <meta name="twitter:image" content="https://images.rove.me/w_1920,q_85/mnlwgk0fyzdzksvv0edq/java-tea-harvest.jpg">
-    <meta name="robots" content="index, follow">
+    <title>TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
+    <meta name="description" content="TropicaFarm is Indonesia's trusted exporter of premium teas and essential oils. We offer high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations. Certified organic products available for global markets.">
+    <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products, sustainable farming">
+    <meta name="author" content="TropicaFarm">
+    <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://tropicfarm.com">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="English">
+    <meta name="geo.region" content="ID">
+    <meta name="geo.placename" content="Bandung">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter">
+    <meta property="og:description" content="Indonesia's trusted exporter of premium teas and essential oils. High-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
+    <meta property="og:image" content="assets/images/java-tea-harvest.jpg">
+    <meta property="og:url" content="https://tropicafarm.com">
+    <meta property="og:site_name" content="TropicaFarm">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TropicaFarm - Premium Indonesian Tea & Essential Oils">
+    <meta name="twitter:description" content="Discover premium Indonesian teas and essential oils from TropicaFarm. Direct from sustainable plantations to global markets.">
+    <meta name="twitter:image" content="assets/images/java-tea-harvest.jpg">
+
+    <link rel="canonical" href="https://tropicafarm.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -44,7 +54,7 @@
         html { scroll-behavior: smooth; }
         .hero { 
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                        url('java-tea-harvest.jpg') center/cover no-repeat; 
+                        url('assets/images/java-tea-harvest.jpg') center/cover no-repeat; 
         }
         .floating-cta { 
             position: fixed; 
@@ -54,7 +64,7 @@
         }
         .statistics-bg {
             background: linear-gradient(rgba(44, 119, 68, 0.9), rgba(26, 92, 48, 0.9)), 
-                        url('java-tea-harvest.jpg') center/cover no-repeat;
+                        url('assets/images/java-tea-harvest.jpg') center/cover no-repeat;
         }
         .product-img {
             height: 250px;
@@ -70,6 +80,39 @@
             transform: translateX(0);
         }
     </style>
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "TropicaFarm",
+      "url": "https://tropicafarm.com",
+      "logo": "assets/images/java-tea-harvest.jpg",
+      "description": "Premium Indonesian tea and essential oils exporter",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Jl. Plantation Road No. 123",
+        "addressLocality": "Bandung",
+        "addressRegion": "West Java",
+        "postalCode": "40111",
+        "addressCountry": "ID"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+62-812-1256-0026",
+        "contactType": "sales",
+        "email": "info@tropicafarm.com",
+        "availableLanguage": ["en", "id"]
+      },
+      "sameAs": [
+        "https://facebook.com/tropicafarm",
+        "https://instagram.com/tropicafarm",
+        "https://linkedin.com/company/tropicafarm",
+        "https://twitter.com/tropicafarm"
+      ]
+    }
+    </script>
 </head>
 <body class="font-sans text-gray-800 overflow-x-hidden">
     <!-- Mobile Menu -->
@@ -93,7 +136,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="#" class="flex items-center space-x-2">
                 <i class="fas fa-leaf text-primary text-2xl"></i>
-                <span class="text-2xl font-bold text-primary">TropicFarm</span>
+                <span class="text-2xl font-bold text-primary">TropicaFarm</span>
             </a>
             <nav class="hidden md:flex space-x-6">
                 <a href="#" class="font-medium hover:text-primary">Home</a>
@@ -130,7 +173,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
                     <div class="relative">
-                        <img src="tea-plantation-in-indonesia.jpg" alt="Tea Plantation" class="rounded-lg shadow-xl">
+                        <img src="assets/images/tea-plantation-in-indonesia.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="rounded-lg shadow-xl" loading="lazy">
                         <div class="absolute -bottom-4 -right-4 bg-primary text-white p-6 rounded-lg shadow-lg hidden md:block">
                             <p class="text-3xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
@@ -196,7 +239,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden">
-                        <img src="black-tea.jpg" alt="Black Tea" class="w-full product-img object-cover">
+                        <img src="assets/images/black-tea.jpg" alt="Premium Indonesian black tea leaves with rich, dark color showing excellent oxidation" class="w-full product-img object-cover" loading="lazy">
                     </div>
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-4">
@@ -219,7 +262,7 @@
                 </div>
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden">
-                        <img src="green-tea.jpg" alt="Green Tea" class="w-full product-img object-cover">
+                        <img src="assets/images/green-tea.jpg" alt="Fresh Indonesian green tea leaves with vibrant color and natural appearance" class="w-full product-img object-cover" loading="lazy">
                     </div>
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-4">
@@ -278,7 +321,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl h-full">
                     <div class="overflow-hidden">
-                        <img src="nutmeg-oil.jpg" alt="Nutmeg Oil" class="w-full product-img object-cover">
+                        <img src="assets/images/nutmeg-oil.jpg" alt="Pure nutmeg essential oil in amber bottle, extracted from Indonesian nutmeg seeds" class="w-full product-img object-cover" loading="lazy">
                     </div>
                     <div class="p-6">
                         <div class="flex justify-between items-center mb-4">
@@ -297,7 +340,7 @@
                 </div>
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl h-full">
                     <div class="overflow-hidden">
-                        <img src="patchouli-oil.jpg" alt="Patchouli Oil" class="w-full product-img object-cover">
+                        <img src="assets/images/patchouli-oil.jpg" alt="Premium patchouli essential oil showcasing rich amber color in glass container" class="w-full product-img object-cover" loading="lazy">
                     </div>
                     <div class="p-6">
                         <div class="flex justify-between items-center mb-4">
@@ -458,7 +501,7 @@
                                 <i class="fas fa-envelope text-primary mt-1 mr-4"></i>
                                 <div>
                                     <h4 class="font-semibold">Email</h4>
-                                    <p class="text-gray-600">meirisa.yusniar@tropicfarm.com</p>
+                                    <p class="text-gray-600">meirisa.yusniar@tropicafarm.com</p>
                                 </div>
                             </div>
                         </div>
@@ -469,7 +512,7 @@
     </section>
 
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/6281212560026?text=Hello%20TropicFarm%2C%20I%20am%20interested%20in%20your%20products" target="_blank" class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white px-4 py-3 rounded-lg flex items-center justify-center shadow-lg transform transition duration-300 hover:scale-105 z-50">
+    <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20products" target="_blank" class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white px-4 py-3 rounded-lg flex items-center justify-center shadow-lg transform transition duration-300 hover:scale-105 z-50">
         <i class="fab fa-whatsapp text-xl mr-2"></i>
         <span>Chat with us</span>
     </a>
@@ -479,7 +522,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
                 <div>
-                    <h3 class="text-2xl font-bold text-white mb-6">TropicFarm</h3>
+                    <h3 class="text-2xl font-bold text-white mb-6">TropicaFarm</h3>
                     <p class="text-gray-400 mb-6">Premium Indonesian tea and essential oils for global markets. Harvested from Indonesia's finest plantations.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white transition">
@@ -528,13 +571,13 @@
                         </p>
                         <p class="flex items-center text-gray-400">
                             <i class="fas fa-envelope mr-3"></i>
-                            <span>info@tropicfarm.com</span>
+                            <span>info@tropicafarm.com</span>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 TropicFarm. All Rights Reserved.</p>
+                <p>&copy; 2024 TropicaFarm. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
