--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#2c7744">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2c7744">
+    <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#2c7744">
+    
     <title>TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
     <meta name="description" content="TropicaFarm is Indonesia's trusted exporter of premium teas and essential oils. We offer high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations. Certified organic products available for global markets.">
     <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products, sustainable farming">
