--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="revisit-after" content="7 days">
     <meta name="language" content="English">
     <meta name="geo.region" content="ID">
-    <meta name="geo.placename" content="Bandung">
+    <meta name="geo.placename" content="Purwakarta">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -104,10 +104,10 @@
       "description": "Premium Indonesian tea and essential oils exporter",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Jl. Plantation Road No. 123",
-        "addressLocality": "Bandung",
-        "addressRegion": "West Java",
-        "postalCode": "40111",
+        "streetAddress": "Kampung Pareang, Kiarapedes, Purwakarta",
+        "addressLocality": "Kabupaten Purwakarta",
+        "addressRegion": "Jawa Barat",
+        "postalCode": "41175",
         "addressCountry": "ID"
       },
       "contactPoint": {
@@ -499,7 +499,7 @@
                                 <i class="fas fa-map-marker-alt text-primary mt-1 mr-4"></i>
                                 <div>
                                     <h4 class="font-semibold">Address</h4>
-                                    <p class="text-gray-600">Jl. Plantation Road No. 123, Bandung, Indonesia</p>
+                                    <p class="text-gray-600">Kampung Pareang, Kiarapedes, Purwakarta</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -575,7 +575,7 @@
                     <div class="space-y-4">
                         <p class="flex items-start text-gray-400">
                             <i class="fas fa-map-marker-alt mt-1.5 mr-3"></i>
-                            <span>Jl. Plantation Road No. 123, Bandung, Indonesia</span>
+                            <span>Kampung Pareang, Kiarapedes, Purwakarta</span>
                         </p>
                         <p class="flex items-center text-gray-400">
                             <i class="fas fa-phone mr-3"></i>
