--- a/index.html
+++ b/index.html
@@ -619,6 +619,157 @@
                 navbar.classList.remove('shadow-lg');
             }
         });
+
+        // Form validation and submission
+        const contactForm = document.getElementById('contactForm');
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        const phoneRegex = /^[+]?[(]?[0-9]{3}[)]?[-\s.]?[0-9]{3}[-\s.]?[0-9]{4,6}$/;
+
+        function showError(input, message) {
+            const formControl = input.parentElement;
+            const errorMessage = formControl.querySelector('.error-message') || document.createElement('p');
+            errorMessage.className = 'error-message text-red-500 text-sm mt-1';
+            errorMessage.textContent = message;
+            if (!formControl.querySelector('.error-message')) {
+                formControl.appendChild(errorMessage);
+            }
+            input.classList.add('border-red-500');
+            input.classList.remove('border-gray-300');
+        }
+
+        function showSuccess(input) {
+            const formControl = input.parentElement;
+            const errorMessage = formControl.querySelector('.error-message');
+            if (errorMessage) {
+                errorMessage.remove();
+            }
+            input.classList.remove('border-red-500');
+            input.classList.add('border-gray-300');
+        }
+
+        function validateInput(input) {
+            const value = input.value.trim();
+            
+            if (input.id === 'name') {
+                if (value === '') {
+                    showError(input, 'Name is required');
+                    return false;
+                } else if (value.length < 2) {
+                    showError(input, 'Name must be at least 2 characters');
+                    return false;
+                } else {
+                    showSuccess(input);
+                    return true;
+                }
+            }
+
+            if (input.id === 'email') {
+                if (value === '') {
+                    showError(input, 'Email is required');
+                    return false;
+                } else if (!emailRegex.test(value)) {
+                    showError(input, 'Please enter a valid email address');
+                    return false;
+                } else {
+                    showSuccess(input);
+                    return true;
+                }
+            }
+
+            if (input.id === 'message') {
+                if (value === '') {
+                    showError(input, 'Message is required');
+                    return false;
+                } else if (value.length < 10) {
+                    showError(input, 'Message must be at least 10 characters');
+                    return false;
+                } else {
+                    showSuccess(input);
+                    return true;
+                }
+            }
+
+            return true;
+        }
+
+        function showNotification(message, isError = false) {
+            const notification = document.createElement('div');
+            notification.className = `fixed top-4 right-4 px-6 py-3 rounded-lg shadow-lg ${
+                isError ? 'bg-red-500' : 'bg-green-500'
+            } text-white transform transition-all duration-300`;
+            notification.textContent = message;
+            document.body.appendChild(notification);
+
+            setTimeout(() => {
+                notification.style.opacity = '0';
+                setTimeout(() => notification.remove(), 300);
+            }, 3000);
+        }
+
+        contactForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            // Validate all inputs
+            const inputs = contactForm.querySelectorAll('input, textarea, select');
+            let isValid = true;
+
+            inputs.forEach(input => {
+                if (!validateInput(input)) {
+                    isValid = false;
+                }
+            });
+
+            if (!isValid) {
+                showNotification('Please fill in all required fields correctly', true);
+                return;
+            }
+
+            // Show loading state
+            const submitButton = contactForm.querySelector('button[type="submit"]');
+            const originalButtonText = submitButton.innerHTML;
+            submitButton.innerHTML = '<i class="fas fa-spinner fa-spin mr-2"></i> Sending...';
+            submitButton.disabled = true;
+
+            try {
+                // Prepare form data
+                const formData = new FormData(contactForm);
+                const data = Object.fromEntries(formData.entries());
+
+                // Send email using Formspree (you'll need to replace with your actual email service)
+                const response = await fetch('https://formspree.io/f/meirisa.yusniar@tropicafarm.com', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(data),
+                });
+
+                if (response.ok) {
+                    showNotification('Message sent successfully! We will get back to you soon.');
+                    contactForm.reset();
+                } else {
+                    throw new Error('Failed to send message');
+                }
+            } catch (error) {
+                showNotification('Failed to send message. Please try again later.', true);
+                console.error('Error:', error);
+            } finally {
+                // Reset button state
+                submitButton.innerHTML = originalButtonText;
+                submitButton.disabled = false;
+            }
+        });
+
+        // Add real-time validation
+        const inputs = contactForm.querySelectorAll('input, textarea');
+        inputs.forEach(input => {
+            input.addEventListener('input', () => {
+                validateInput(input);
+            });
+            input.addEventListener('blur', () => {
+                validateInput(input);
+            });
+        });
     </script>
 </body>
 </html>
