--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="canonical" href="https://tropicafarm.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -735,21 +736,34 @@
                 const formData = new FormData(contactForm);
                 const data = Object.fromEntries(formData.entries());
 
-                // Send email using Formspree (you'll need to replace with your actual email service)
-                const response = await fetch('https://formspree.io/f/meirisa.yusniar@tropicafarm.com', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(data),
-                });
-
-                if (response.ok) {
-                    showNotification('Message sent successfully! We will get back to you soon.');
-                    contactForm.reset();
-                } else {
-                    throw new Error('Failed to send message');
-                }
+                // Send email using SMTP.js
+                Email.send({
+                    Host: "smtp.gmail.com",
+                    Port: "587",
+                    Username: "kuali.lab.id@gmail.com",
+                    Password: "clwk nodv plwy rkfa",
+                    To: "meirisa.yusniar@tropicafarm.com",
+                    From: data.email,
+                    Subject: `New Contact Form Submission from ${data.name}`,
+                    Body: `
+                        <h2>New Contact Form Submission</h2>
+                        <p><strong>Name:</strong> ${data.name}</p>
+                        <p><strong>Email:</strong> ${data.email}</p>
+                        <p><strong>Company:</strong> ${data.company || 'Not provided'}</p>
+                        <p><strong>Product Interest:</strong> ${data.product || 'Not specified'}</p>
+                        <p><strong>Message:</strong></p>
+                        <p>${data.message}</p>
+                    `
+                }).then(
+                    message => {
+                        if (message === 'OK') {
+                            showNotification('Message sent successfully! We will get back to you soon.');
+                            contactForm.reset();
+                        } else {
+                            throw new Error('Failed to send message');
+                        }
+                    }
+                );
             } catch (error) {
                 showNotification('Failed to send message. Please try again later.', true);
                 console.error('Error:', error);
