--- a/index.html
+++ b/index.html
@@ -390,12 +390,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p class="text-gray-600 mb-6 italic">"The quality of Tropica Farmindo's black tea is exceptional. Their consistent supply and attention to quality standards have made them our preferred supplier for five years running."</p>
+                    <p class="text-gray-600 mb-6 italic">"Tropica Farmindo's black tea quality is exceptional. As a wholesale distributor in Semarang, we've been sourcing their products for 3 years and consistently receive positive feedback from our business clients."</p>
                     <div class="flex items-center">
-                        <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">JD</div>
+                        <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">AS</div>
                         <div>
-                            <h4 class="font-semibold">John Doyle</h4>
-                            <p class="text-sm text-gray-500">Tea Importer, UK</p>
+                            <h4 class="font-semibold">Ahmad Surya</h4>
+                            <p class="text-sm text-gray-500">Wholesale Tea Distributor, Semarang</p>
                         </div>
                     </div>
                 </div>
@@ -407,12 +407,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p class="text-gray-600 mb-6 italic">"We've been using Tropica's patchouli oil in our luxury fragrance line for years. The depth and quality of their oils are unmatched in the market."</p>
+                    <p class="text-gray-600 mb-6 italic">"Tropica Farmindo's nutmeg oil has become a key ingredient in our cosmetic manufacturing business. The consistent quality and distinctive aroma have significantly enhanced our product line's market appeal."</p>
                     <div class="flex items-center">
-                        <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">SM</div>
+                        <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">DR</div>
                         <div>
-                            <h4 class="font-semibold">Sophie Martin</h4>
-                            <p class="text-sm text-gray-500">Perfumer, France</p>
+                            <h4 class="font-semibold">Dewi Rahayu</h4>
+                            <p class="text-sm text-gray-500">Cosmetic Manufacturer, Bandung</p>
                         </div>
                     </div>
                 </div>
@@ -424,12 +424,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <p class="text-gray-600 mb-6 italic">"Tropica Farmindo's organic certification and sustainable practices align perfectly with our brand values. Their green tea has been a cornerstone of our product line."</p>
+                    <p class="text-gray-600 mb-6 italic">"As a regional distributor in Karawang, we value Tropica Farmindo's reliable supply chain and consistent product quality. Their business-to-business service has been instrumental in our growth."</p>
                     <div class="flex items-center">
-                        <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">RK</div>
+                        <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">BS</div>
                         <div>
-                            <h4 class="font-semibold">Rachel Kim</h4>
-                            <p class="text-sm text-gray-500">Organic Tea Brand, USA</p>
+                            <h4 class="font-semibold">Budi Santoso</h4>
+                            <p class="text-sm text-gray-500">Regional Distributor, Karawang</p>
                         </div>
                     </div>
                 </div>
