update about us and capacity

--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
                 </div>
                 <div class="md:w-1/2 mt-8 md:mt-0">
                     <h2 class="text-4xl font-bold text-primary mb-6">About Tropica Farmindo</h2>
-                    <p class="text-gray-600 mb-6 leading-relaxed">Tropica Farmindo is a leading exporter of premium Indonesian tea and essential oils. With over two decades of experience, we ensure the highest quality products for our global partners.</p>
+                    <p class="text-gray-600 mb-6 leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we can produce 10 tons of black tea and 10 tons of green tea daily, along with 20 tons of essential oils monthly. While we're expanding our reach to international markets, we continue to serve our domestic partners with the highest quality products.</p>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
                         <div class="flex items-start">
                             <div class="bg-primary/10 p-3 rounded-full mr-4">
-                                <i class="fas fa-leaf text-primary"></i>
+                                <i class="fas fa-industry text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Premium Quality</h3>
-                                <p class="text-gray-600">Carefully selected and processed for exceptional quality.</p>
+                                <h3 class="font-semibold text-lg">Production Capacity</h3>
+                                <p class="text-gray-600">10 tons of tea per day, 20 tons of oil per month</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -211,8 +211,8 @@
                                 <i class="fas fa-globe text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Global Export</h3>
-                                <p class="text-gray-600">Ready to serve international markets with premium quality products.</p>
+                                <h3 class="font-semibold text-lg">Market Focus</h3>
+                                <p class="text-gray-600">Strong domestic presence with growing international reach</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -220,8 +220,8 @@
                                 <i class="fas fa-certificate text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Certified Organic</h3>
-                                <p class="text-gray-600">Sustainable farming practices with organic certification.</p>
+                                <h3 class="font-semibold text-lg">Quality Standards</h3>
+                                <p class="text-gray-600">Consistent quality through 20+ years of expertise</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -229,13 +229,13 @@
                                 <i class="fas fa-handshake text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Fair Trade</h3>
-                                <p class="text-gray-600">Supporting local farmers with fair compensation.</p>
+                                <h3 class="font-semibold text-lg">Business Partners</h3>
+                                <p class="text-gray-600">Trusted by manufacturers and distributors nationwide</p>
                             </div>
                         </div>
                     </div>
                     <a href="#contact" class="inline-flex items-center text-primary font-medium hover:text-accent transition">
-                        Learn more about our story <i class="fas fa-arrow-right ml-2"></i>
+                        Learn more about our capabilities <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
             </div>
