--- a/index.html
+++ b/index.html
@@ -195,7 +195,28 @@
                 </div>
                 <div class="md:w-1/2 mt-8 md:mt-0">
                     <h2 class="text-4xl font-bold text-primary mb-6">About Tropica Farmindo</h2>
-                    <p class="text-gray-600 mb-6 leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we can produce 10 tons of black tea and 10 tons of green tea daily, along with 20 tons of essential oils monthly. While we're expanding our reach to international markets, we continue to serve our domestic partners with the highest quality products.</p>
+                    <p class="text-gray-600 mb-6 leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:</p>
+                    
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
+                        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                            <div class="text-3xl font-bold text-primary mb-2">180</div>
+                            <div class="text-gray-600">Tons of Black Tea</div>
+                            <div class="text-sm text-gray-500 mt-1">Per Month</div>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                            <div class="text-3xl font-bold text-primary mb-2">180</div>
+                            <div class="text-gray-600">Tons of Green Tea</div>
+                            <div class="text-sm text-gray-500 mt-1">Per Month</div>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                            <div class="text-3xl font-bold text-primary mb-2">20</div>
+                            <div class="text-gray-600">Tons of Essential Oils</div>
+                            <div class="text-sm text-gray-500 mt-1">Per Month</div>
+                        </div>
+                    </div>
+
+                    <p class="text-gray-600 mb-6 leading-relaxed">While we're expanding our reach to international markets, we continue to serve our domestic partners with the highest quality products.</p>
+                    
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
                         <div class="flex items-start">
                             <div class="bg-primary/10 p-3 rounded-full mr-4">
@@ -203,7 +224,7 @@
                             </div>
                             <div>
                                 <h3 class="font-semibold text-lg">Production Capacity</h3>
-                                <p class="text-gray-600">10 tons of tea per day, 20 tons of oil per month</p>
+                                <p class="text-gray-600">380 tons of premium products monthly</p>
                             </div>
                         </div>
                         <div class="flex items-start">
