--- a/index.html
+++ b/index.html
@@ -307,6 +307,18 @@
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Loose Leaf</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
                         </div>
+                        <div class="mb-6">
+                            <h4 class="font-semibold text-gray-800 mb-2">Certifications</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">ISO 22000</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">HACCP</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">Halal</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">PC</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COA</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COO</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">+13 more</span>
+                            </div>
+                        </div>
                         <div class="flex justify-between items-center">
                             <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                                 Request a Quote <i class="fas fa-arrow-right ml-2"></i>
@@ -350,6 +362,18 @@
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Fresh Aroma</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Premium Grade</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
+                        </div>
+                        <div class="mb-6">
+                            <h4 class="font-semibold text-gray-800 mb-2">Certifications</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">ISO 22000</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">HACCP</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">Halal</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">PC</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COA</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COO</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">+13 more</span>
+                            </div>
                         </div>
                         <div class="flex justify-between items-center">
                             <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
@@ -431,6 +455,16 @@
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Steam Distilled</span>
                         </div>
+                        <div class="mb-6">
+                            <h4 class="font-semibold text-gray-800 mb-2">Certifications</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">ISO 22000</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">HACCP</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">Halal</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COA</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COO</span>
+                            </div>
+                        </div>
                         <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                             Request a Quote <i class="fas fa-arrow-right ml-2"></i>
                         </a>
@@ -471,6 +505,16 @@
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Dark Amber</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Aged Quality</span>
+                        </div>
+                        <div class="mb-6">
+                            <h4 class="font-semibold text-gray-800 mb-2">Certifications</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">ISO 22000</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">HACCP</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">Halal</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COA</span>
+                                <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-sm border border-green-200">COO</span>
+                            </div>
                         </div>
                         <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                             Request a Quote <i class="fas fa-arrow-right ml-2"></i>
