bigger image about us

--- a/index.html
+++ b/index.html
@@ -181,82 +181,82 @@
     </section>
 
     <!-- About Us Section -->
-    <section id="about" class="py-20 bg-light">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row items-center gap-12">
+    <section id="about" class="py-28 bg-light">
+        <div class="container mx-auto px-6">
+            <div class="flex flex-col md:flex-row items-stretch gap-16">
                 <div class="md:w-1/2">
-                    <div class="relative">
-                        <img src="assets/images/tea-plantation-in-indonesia.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="rounded-lg shadow-xl" loading="lazy">
-                        <div class="absolute -bottom-4 -right-4 bg-primary text-white p-6 rounded-lg shadow-lg hidden md:block">
-                            <p class="text-3xl font-bold">20+</p>
+                    <div class="relative h-full">
+                        <img src="assets/images/tea-plantation-west-java.webp" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
+                        <div class="absolute -bottom-6 -right-6 bg-primary text-white p-8 rounded-2xl shadow-xl hidden md:block">
+                            <p class="text-4xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
                         </div>
                     </div>
                 </div>
                 <div class="md:w-1/2 mt-8 md:mt-0">
-                    <h2 class="text-4xl font-bold text-primary mb-6">About Tropica Farmindo</h2>
-                    <p class="text-gray-600 mb-6 leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:</p>
+                    <h2 class="text-5xl font-bold text-primary mb-8">About Tropica Farmindo</h2>
+                    <p class="text-gray-600 mb-8 text-lg leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:</p>
                     
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
-                        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                            <div class="text-3xl font-bold text-primary mb-2">180</div>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
+                        <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
+                            <div class="text-4xl font-bold text-primary mb-2">180</div>
                             <div class="text-gray-600">Tons of Black Tea</div>
                             <div class="text-sm text-gray-500 mt-1">Per Month</div>
                         </div>
-                        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                            <div class="text-3xl font-bold text-primary mb-2">180</div>
+                        <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
+                            <div class="text-4xl font-bold text-primary mb-2">180</div>
                             <div class="text-gray-600">Tons of Green Tea</div>
                             <div class="text-sm text-gray-500 mt-1">Per Month</div>
                         </div>
-                        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                            <div class="text-3xl font-bold text-primary mb-2">20</div>
+                        <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
+                            <div class="text-4xl font-bold text-primary mb-2">20</div>
                             <div class="text-gray-600">Tons of Essential Oils</div>
                             <div class="text-sm text-gray-500 mt-1">Per Month</div>
                         </div>
                     </div>
 
-                    <p class="text-gray-600 mb-6 leading-relaxed">While we're expanding our reach to international markets, we continue to serve our domestic partners with the highest quality products.</p>
+                    <p class="text-gray-600 mb-12 text-lg leading-relaxed">While we're expanding our reach to international markets, we continue to serve our domestic partners with the highest quality products.</p>
                     
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                         <div class="flex items-start">
-                            <div class="bg-primary/10 p-3 rounded-full mr-4">
-                                <i class="fas fa-industry text-primary"></i>
+                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
+                                <i class="fas fa-industry text-2xl text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Production Capacity</h3>
+                                <h3 class="font-semibold text-xl mb-2">Production Capacity</h3>
                                 <p class="text-gray-600">380 tons of premium products monthly</p>
                             </div>
                         </div>
                         <div class="flex items-start">
-                            <div class="bg-primary/10 p-3 rounded-full mr-4">
-                                <i class="fas fa-globe text-primary"></i>
+                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
+                                <i class="fas fa-globe text-2xl text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Market Focus</h3>
+                                <h3 class="font-semibold text-xl mb-2">Market Focus</h3>
                                 <p class="text-gray-600">Strong domestic presence with growing international reach</p>
                             </div>
                         </div>
                         <div class="flex items-start">
-                            <div class="bg-primary/10 p-3 rounded-full mr-4">
-                                <i class="fas fa-certificate text-primary"></i>
+                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
+                                <i class="fas fa-certificate text-2xl text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Quality Standards</h3>
+                                <h3 class="font-semibold text-xl mb-2">Quality Standards</h3>
                                 <p class="text-gray-600">Consistent quality through 20+ years of expertise</p>
                             </div>
                         </div>
                         <div class="flex items-start">
-                            <div class="bg-primary/10 p-3 rounded-full mr-4">
-                                <i class="fas fa-handshake text-primary"></i>
+                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
+                                <i class="fas fa-handshake text-2xl text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg">Business Partners</h3>
+                                <h3 class="font-semibold text-xl mb-2">Business Partners</h3>
                                 <p class="text-gray-600">Trusted by manufacturers and distributors nationwide</p>
                             </div>
                         </div>
                     </div>
-                    <a href="#contact" class="inline-flex items-center text-primary font-medium hover:text-accent transition">
-                        Learn more about our capabilities <i class="fas fa-arrow-right ml-2"></i>
+                    <a href="#contact" class="inline-flex items-center text-primary font-medium text-lg hover:text-accent transition">
+                        Learn more about our capabilities <i class="fas fa-arrow-right ml-3"></i>
                     </a>
                 </div>
             </div>
