--- a/index.html
+++ b/index.html
@@ -197,21 +197,21 @@
                     <h2 class="text-5xl font-bold text-primary mb-8">About Tropica Farmindo</h2>
                     <p class="text-gray-600 mb-8 text-lg leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:</p>
                     
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
-                        <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
-                            <div class="text-4xl font-bold text-primary mb-2">180</div>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
+                        <div class="border-l-4 border-primary pl-6">
+                            <div class="text-4xl font-bold text-primary mb-1">180</div>
                             <div class="text-gray-600">Tons of Black Tea</div>
-                            <div class="text-sm text-gray-500 mt-1">Per Month</div>
+                            <div class="text-sm text-gray-500">Per Month</div>
                         </div>
-                        <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
-                            <div class="text-4xl font-bold text-primary mb-2">180</div>
+                        <div class="border-l-4 border-primary pl-6">
+                            <div class="text-4xl font-bold text-primary mb-1">180</div>
                             <div class="text-gray-600">Tons of Green Tea</div>
-                            <div class="text-sm text-gray-500 mt-1">Per Month</div>
+                            <div class="text-sm text-gray-500">Per Month</div>
                         </div>
-                        <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
-                            <div class="text-4xl font-bold text-primary mb-2">20</div>
+                        <div class="border-l-4 border-primary pl-6">
+                            <div class="text-4xl font-bold text-primary mb-1">20</div>
                             <div class="text-gray-600">Tons of Essential Oils</div>
-                            <div class="text-sm text-gray-500 mt-1">Per Month</div>
+                            <div class="text-sm text-gray-500">Per Month</div>
                         </div>
                     </div>
 
