--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-stretch gap-16">
                 <div class="md:w-1/2">
-                    <div class="relative h-full">
-                        <img src="assets/images/tea-plantation-west-java.webp" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
+                    <div class="relative h-[480px]">
+                        <img src="assets/images/tea-plantation.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
                         <div class="absolute -bottom-6 -right-6 bg-primary text-white p-8 rounded-2xl shadow-xl hidden md:block">
                             <p class="text-4xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
