--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
       "description": "Premium Indonesian tea and essential oils exporter",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Kampung Pareang, Kiarapedes, Purwakarta",
-        "addressLocality": "Kabupaten Purwakarta",
-        "addressRegion": "Jawa Barat",
+        "streetAddress": "PT Global Tropica Farmindo",
+        "addressLocality": "Kampung Pareang, Kiarapedes, Purwakarta",
+        "addressRegion": "West Java",
         "postalCode": "41175",
         "addressCountry": "ID"
       },
@@ -137,8 +137,6 @@
                 <a href="#about" class="font-medium hover:text-primary">About Us</a>
                 <a href="#tea-products" class="font-medium hover:text-primary">Tea Products</a>
                 <a href="#essential-oils" class="font-medium hover:text-primary">Essential Oils</a>
-                <a href="#stats" class="font-medium hover:text-primary">Our Impact</a>
-                <a href="#testimonials" class="font-medium hover:text-primary">Testimonials</a>
                 <a href="#contact" class="font-medium hover:text-primary">Contact</a>
             </nav>
         </div>
@@ -156,8 +154,6 @@
                 <a href="#about" class="font-medium hover:text-primary">About Us</a>
                 <a href="#tea-products" class="font-medium hover:text-primary">Tea Products</a>
                 <a href="#essential-oils" class="font-medium hover:text-primary">Essential Oils</a>
-                <a href="#stats" class="font-medium hover:text-primary">Our Impact</a>
-                <a href="#testimonials" class="font-medium hover:text-primary">Testimonials</a>
                 <a href="#contact" class="font-medium hover:text-primary">Contact</a>
             </nav>
             <button id="menuButton" class="md:hidden text-2xl text-primary"><i class="fas fa-bars"></i></button>
@@ -506,21 +502,27 @@
                                 <i class="fas fa-map-marker-alt text-primary mt-1 mr-4"></i>
                                 <div>
                                     <h4 class="font-semibold">Address</h4>
-                                    <p class="text-gray-600">Kampung Pareang, Kiarapedes, Purwakarta</p>
+                                    <p class="text-gray-600">
+                                        PT Global Tropica Farmindo
+                                        <br>
+                                        Kampung Pareang, Kiarapedes, Purwakarta
+                                        <br>
+                                        West Java, Indonesia
+                                    </p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i class="fas fa-phone text-primary mt-1 mr-4"></i>
                                 <div>
                                     <h4 class="font-semibold">Phone</h4>
-                                    <p class="text-gray-600">+62 812 1256 0026</p>
+                                    <p class="text-gray-600"><a href="https://wa.me/6281212560026" target="_blank">+62 812 1256 0026</a></p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i class="fas fa-envelope text-primary mt-1 mr-4"></i>
                                 <div>
                                     <h4 class="font-semibold">Email</h4>
-                                    <p class="text-gray-600">meirisa.yusniar@tropicafarm.com</p>
+                                    <p class="text-gray-600"><a href="mailto:meirisa.yusniar@tropicafarm.com" target="_blank">meirisa.yusniar@tropicafarm.com</a></p>
                                 </div>
                             </div>
                         </div>
@@ -582,7 +584,13 @@
                     <div class="space-y-4">
                         <p class="flex items-start text-gray-400">
                             <i class="fas fa-map-marker-alt mt-1.5 mr-3"></i>
-                            <span>Kampung Pareang, Kiarapedes, Purwakarta</span>
+                            <span>
+                                PT Global Tropica Farmindo
+                                <br>
+                                Kampung Pareang, Kiarapedes, Purwakarta
+                                <br>
+                                West Java, Indonesia
+                            </span>
                         </p>
                         <p class="flex items-center text-gray-400">
                             <i class="fas fa-phone mr-3"></i>
